7-Zip-JBinding ChangeLog
========================

Release - 4.65-1.01rc-extr-only (Release candidate, extraction only, cross-platform, based on zip/p7zip 4.65)

	* CAB format support + tests

	* LZH format support + tests

	* CHM format support + tests

	* Bugfix: crash, if access archive object out of a call back method


Release - 4.65-1.0rc-extr-only (Release candidate, extraction only, cross-platform, based on zip/p7zip 4.65)

	* 7-Zip-JBinding is cross-platform now !

	* 7-Zip-JBinding binds 7-zip for windows and p7zip for non-windows systems

	* Supported archive methods: 7z, Arj, BZip2, Cpio, GZip, HFS, ISO, Lzma, Rar, Split, Tar, Z, Zip
	  
	* Support for volumed 7z and rar archives

	* Over 3000 JUnit tests extraction of archive formats: 7z, Arj, BZip2, Cpio, GZip, ISO, Lzma, Rar, Tar, Z, Zip 

	* Use CMake to build, test and package on different operating systems

	* 7-Zip-JBinding requires Java 1.5 or higher

	* Complete rework of entire code
	
	* Compression method auto detection
	
	* Base java package changed from "net.sf.sevenzip" to "net.sf.sevenzipjbinding"
	
	* Helper class to open volumed 7z archives (assemble multiple InStreams into single InStream)
	
	* Get ride of oneElementArrays as a way to return values out of call back functions
	
	* Several bug fixes, including issue #2823930. 
	
	* Brand new web site
	
Release - 0.4.1 (beta, bug fix release)
    * Bug fixed: 2525877 (Memory leak)
    
Release - 0.4 (beta, extraction only)
    * Full rework of c++ code: thread safe JNI-calls, correct exception handling between threads
        - Bug fixed #2441909 - Can't extract encrypted 7-Zip files
        
    * New open/extract method for encrypted archives and items (standard and simple interface)
    
    * JUnit tests for the extraction of encrypted archives and exception handling 

    * New examples on the home page
     
Release - 0.3 (beta, extraction only, simple extraction interface)
    Some memory problems was fixed: