@@ -50,8 +50,7 @@ public class InArchiveImpl implements ISevenZipInArchive {
 		/**
 		 * {@inheritDoc}
 		 */
-		public boolean prepareOperation(ExtractAskMode extractAskMode) {
-			return true;
+		public void prepareOperation(ExtractAskMode extractAskMode) {
 		}
 
 		/**
