@@ -561,8 +561,7 @@ public abstract class ExtractFileAbstractTest extends JUnitNativeTestBase {
 		 * {@inheritDoc}
 		 */
 
-		public boolean prepareOperation(ExtractAskMode extractAskMode) {
-			return true;
+		public void prepareOperation(ExtractAskMode extractAskMode) {
 		}
 
 		/**
